# mh8a-web

./: .gitignore  AGENTS.md
backend/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
backend/include/: BroadcastHub.h  ConfigController.h  ConfigStorage.h  ModbusService.h  TelemetryWs.h
backend/src/: BroadcastHub.cpp  ConfigController.cpp  ConfigStorage.cpp  ModbusService.cpp  TelemetryWs.cpp  main.cpp
doc/: MODBUS TCP通讯协议-20251119.xlsx
frontend/: next.config.mjs  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/modbus/[...path]/: route.ts
frontend/components/: EnvCard.tsx  HeroPanel.tsx  MonitorCard.tsx  SettingsModal.tsx  StatusGrid.tsx  TempCard.tsx
frontend/lib/: mockData.ts  types.ts
